--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equive="X-UA-Compatible" content="IE-edge">
     <title>Portfolio</title>
-
+    
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -100,7 +100,7 @@
     <!-- Portfolio section design -->
 
     <section class="projects" id="projects">
-        <h2 class="heading">Mini <span>Project</span></h2>
+        <h2 class="heading">Project</span></h2>
 
         <div class="projects-container">
             <div class="projects-box">
