--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Web Developer!</h3>
+            <h3>App Developer!</h3>
             <p> Highly creative Entry Level Graphic Designer with keen attention to detail and proficiency in programming, seeking role to utilize design skills in creating innovative visual elements, maximizing brand awareness through logos, animations, and graphics.</p>
             <a href="#" class="btn">Read More</a>
         </div>
