--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>App Developer!</h3>
-            <p> Highly creative Entry Level Graphic Designer with keen attention to detail and proficiency in programming, seeking role to utilize design skills in creating innovative visual elements, maximizing brand awareness through logos, animations, and graphics.</p>
+            <p>Highly creative Entry Level App Developer with keen attention to detail and proficiency in programming, seeking a role to utilize development skills in creating innovative mobile applications, maximizing user engagement through efficient and user-friendly designs.
+
+</p>
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
