--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>App Developer!</h3>
-            <p>Highly creative Entry Level App Developer with keen attention to detail and proficiency in programming, seeking a role to utilize development skills in creating innovative mobile applications, maximizing user engagement through efficient and user-friendly designs.
+            <h3>Web Developer!</h3>
+            <p>Throughout my academic journey, I have always been fascinated by technology and its potential to solve complex problems. My interest in programming and problem-solving led me to pursue a career in the tech industry. I am excited to learn from experienced mentors and work on challenging projects that push me to grow as a professional.
 
 </p>
             <a href="#" class="btn">Read More</a>
